# UPMEM-MLP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  benchmarks.md  dpu_program.c  generate.py  host.c  init_network.c  matmul.template  matrices.template  mlp.h  read_dataset.py  read_image_data.c
.github/: build.yaml  build_upmem_toolchain.sh
.github/workflows/: memory_leak_tests.yaml  unit_tests.yaml  valgrind.yaml
include/: mlp.h  mnist.h  test.h  upmem.h
legacy/: matmul.template
src/: accumulate_gradients.c  accumulate_layer_gradients.c  activation.c  debug.c  delta.c  get_total_loss.c  get_y.c  get_z.c  init_layer.c  init_network.c  init_neuron.c  matrix.c  mlp.c  read_image_data.c  sse.c  update_weights.c  utils.c
src/dpu/: dpu_program.c
src/host/: accumulate_layer_gradients.c  activation.c  apply_gradients.c  dpu_host.c  drand.c  frand.c  get_delta.c  get_total_loss.c  get_y.c  get_z.c  init_layer.c  init_neuron.c  matrix.c  mlp.c  sse.c  utils.c
tests/: test_accumulate_layer_gradients.c  test_activation.c  test_delta.c  test_drand.c  test_frand.c  test_get_delta.c  test_get_y.c  test_get_z.c  test_init_layer.c  test_init_network.c  test_init_neuron.c  test_matrix.c  test_read_image_data.c  test_read_image_data.txt  test_sse.c  test_update_weights.c
